Closed
Bug 1169151
Opened 10 years ago
Closed 10 years ago
AccessibleCaret remains on the screen when long tapping an empty input
Categories
(Core :: DOM: Selection, defect)
Core
DOM: Selection
Tracking
()
RESOLVED
FIXED
mozilla41
| Tracking | Status | |
|---|---|---|
| firefox41 | --- | fixed |
People
(Reporter: TYLin, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
|
27.55 KB,
image/png
|
Details | |
|
1.09 KB,
patch
|
mtseng
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Open message app to compose a new message.
2. Type some text into the body.
3. Long tap to select a word on the text body.
4. Long tap on the *empty* "To:" field.
Actual result:
The AccessibleCaret remains on the screen.
Expected result:
The AccessibleCaret should disappear.
| Assignee | ||
Comment 1•10 years ago
|
||
This fixed AccessibleCarets remain on the screen when long tapping on an
empty input.
Attachment #8612187 -
Flags: review?(mtseng)
Comment 2•10 years ago
|
||
Comment on attachment 8612187 [details] [diff] [review]
Update carets after long tapping on empty input. (v1)
Review of attachment 8612187 [details] [diff] [review]:
-----------------------------------------------------------------
Looks like this change would send one additional mozcaretstatechangeevent because it call UpdateCaret one more time. I'm not sure whether this change will affect copy/paste bubble behavior or not. r=me if the copy/paste bubble works correctly after applying this patch.
Attachment #8612187 -
Flags: review?(mtseng) → review+
Comment 3•10 years ago
|
||
BTW, you can apply bug 1147329 for testing new bubble.
| Assignee | ||
Comment 4•10 years ago
|
||
I've tested with bug 1147329. The new bubble behavior is not affected by the extra mozcaretstatechangeevent. The bubble is still correct whether we have previously copied some text or not.
| Assignee | ||
Comment 5•10 years ago
|
||
| Assignee | ||
Comment 6•10 years ago
|
||
Comment 7•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in
before you can comment on or make changes to this bug.
Description
•