Bug 1169151 - Update carets after long tapping on empty input. r=mtseng

This fixed AccessibleCarets remain on the screen when long tapping on an
empty input.